--- a/RestfulDEMO.API/appsettings.json
+++ b/RestfulDEMO.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RestFulDEMOConnectionString": "Server=localhost; Database=DEMODb; Trusted_Connection=True; TrustServerCertificate=True"
+  }
 }
