Create a RestFulAuthDbContext and seed role types to the database

--- a/RestfulDEMO.API/appsettings.json
+++ b/RestfulDEMO.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RestFulDEMOConnectionString": "Server=localhost; Database=DEMODb; Trusted_Connection=True; TrustServerCertificate=True"
+    "RestFulDEMOConnectionString": "Server=localhost; Database=DEMODb; Trusted_Connection=True; TrustServerCertificate=True",
+    "RestFulDEMOAuthConnectionString": "Server=localhost; Database=DEMOAuthDb; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "sngdsf78v5d8sfgb5d6afb4a7db57a6d5badb585b",
+    "Issuer": "https://localhost:7008",
+    "Audience": "https://localhost:7008"
   }
 }
