--- a/RestfulDEMO.API/RestfulDEMO.API.csproj
+++ b/RestfulDEMO.API/RestfulDEMO.API.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Folder Include="docs\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
